[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-boost"
version = "0.1.0"
description = "Local Markdown memory runtime for Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Memory Boost contributors" }
]
keywords = ["codex", "memory", "markdown", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
memory-boost = "memory_boost.cli:main"

[tool.setuptools]
packages = ["memory_boost"]
