[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-memory-boost"
version = "0.2.0"
description = "Local Markdown memory engine and Codex skill"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open Memory Boost contributors" }
]
keywords = ["codex", "memory", "markdown", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
open-memory-boost = "memory_boost.cli:main"
memory-boost = "memory_boost.cli:main"

[tool.setuptools]
packages = ["memory_boost"]
